# Hyper-Alpha-Arena

./: .dockerignore  .gitignore  BEDROCK_INTEGRATION.md  Dockerfile  GRAPH_IMPROVEMENTS.md  README.md  SYSTEM_LOGS_README.md  debug_windows.bat  docker-compose.yml  install_uv.ps1  pnpm-lock.yaml  requirements.txt  start_arena.bat  start_arena.ps1  start_arena.sh
backend/: diagnose_accounts.py  init_database.py  main.py  migrate_to_postgresql.py  pyproject.toml  test_logger_config.py  test_manual_start.py  test_strategy_load.py  test_strategy_manager_state.py  test_trigger_strategy.py
backend/api/: account_management_routes.py  account_routes.py  arena_routes.py  config_routes.py  hyperliquid_routes.py  market_data_routes.py  prompt_routes.py  system_log_routes.py  user_routes.py  ws.py
backend/config/: exchanges.py  prompt_templates.py
backend/database/: connection.py  init_postgresql.py  models.py  snapshot_connection.py  snapshot_models.py
backend/migrations/: add_bedrock_fields.py
backend/repositories/: account_repo.py  kline_repo.py  prompt_repo.py  strategy_repo.py
backend/schemas/: account.py  order.py  prompt.py
backend/services/: ai_decision_service.py  asset_curve_calculator.py  asset_snapshot_service.py  hyperliquid_cache.py  hyperliquid_environment.py  hyperliquid_market_data.py  hyperliquid_snapshot_service.py  hyperliquid_symbol_service.py  hyperliquid_trading_client.py  hyperliquid_trading_client.py.backup  hyperliquid_wallet_service.py  kline_collectors.py  kline_data_service.py  kline_realtime_collector.py  market_stream.py  order_matching.py  (+9 more)
(+72 files in other folders)
