[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyper-alpha-arena-backend"
version = "0.2.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "websockets",
    "requests",
    "apscheduler",
    "pandas>=2.3.3",
    "ccxt>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

